cluster/apps/downloads/transmission/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: transmission
  namespace: downloads
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
    external-dns/is-public: "true"
    hajimari.io/enable: "true"
    hajimari.io/icon: "cloud-download-outline"
spec:
  ingressClassName: "nginx"
  rules:
    - host: &host "tms.home.${SECRET_DOMAIN}"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: transmission-transmission-openvpn
                port:
                  number: 80
  tls:
    - hosts:
        - *host
      secretName: "qb-vpn-tls"
